--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+
+
 #view resolver
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
